Create Main Div & inside Make 2 seprate Divs

--- a/index.html
+++ b/index.html
@@ -9,5 +9,12 @@
     <form id="form" onsubmit="return forsumbit()">
      <input type="text" id="search" autofocus placeholder="search a Github User Here">    
     </form>
+    <div id="main">
+        <div class="card">
+        </div>
+        <div>
+            <img class="avatar" src="https://picsum.photos/200" alt="Florin">
+        </div>
+    </div>
 </body>
 </html>
