Create User-info For Github App

--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
         <div>
             <img class="avatar" src="https://picsum.photos/200" alt="Florin">
         </div>
+
+        <div class="user-info">
+            <h2>name</h2>
+            <p>bio</p>
+
+            <ul class="info">
+                <li>###<strong>Followers</strong></li>
+                <li>###<strong>Following</strong></li>
+                <li>###<strong>Repositories</strong></li>
+            </ul>
+        </div>
     </div>
 </body>
 </html>
