--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         placeholder="search a Github User Here"
       />
     </form>
-    <div id="main">
+   <!--  <div id="main">
       <div class="card"></div>
       <div>
         <img class="avatar" src="https://picsum.photos/200" alt="Florin" />
@@ -36,7 +36,7 @@
           <a class="repositories" href="#" target="_blank">Repositories 2</a>
           <a class="repositories" href="#" target="_blank">Repositories 3</a>
         </div>
-      </div>
+      </div> -->
     </div>
     <script src="js/app.js"></script>
   </body>
